@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.controller.helix.core.minion.generator;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -58,7 +57,7 @@ public class TaskGeneratorUtilsTest {
     String taskID = System.currentTimeMillis() + "_0";
     when(mockClusterInfoAccessor.getTaskStates(taskType)).thenReturn(taskStatesMap);
     when(mockClusterInfoAccessor.getTaskConfigs(taskID))
-        .thenReturn(Collections.singletonList(createTaskConfig(taskType, tableName, taskID)));
+        .thenReturn(List.of(createTaskConfig(taskType, tableName, taskID)));
 
     int[] count = new int[1];
     TaskState[] nonFinalTaskStates = new TaskState[]{
@@ -116,7 +115,7 @@ public class TaskGeneratorUtilsTest {
     Map<String, String> tableTaskConfigs = getDummyTaskConfig();
     tableTaskConfigs.put(PinotTaskManager.MINION_INSTANCE_TAG_CONFIG, "minionInstance1");
     TableTaskConfig tableTaskConfig =
-        new TableTaskConfig(Collections.singletonMap(MinionConstants.MergeRollupTask.TASK_TYPE, tableTaskConfigs));
+        new TableTaskConfig(Map.of(MinionConstants.MergeRollupTask.TASK_TYPE, tableTaskConfigs));
     TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName("sampleTable")
         .setTaskConfig(tableTaskConfig).build();
     assertEquals(TaskGeneratorUtils.extractMinionInstanceTag(tableConfig,
@@ -125,7 +124,7 @@ public class TaskGeneratorUtilsTest {
     // no minionInstanceTag passed
     tableTaskConfigs = getDummyTaskConfig();
     tableTaskConfig =
-        new TableTaskConfig(Collections.singletonMap(MinionConstants.MergeRollupTask.TASK_TYPE, tableTaskConfigs));
+        new TableTaskConfig(Map.of(MinionConstants.MergeRollupTask.TASK_TYPE, tableTaskConfigs));
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName("sampleTable")
         .setTaskConfig(tableTaskConfig).build();
     assertEquals(TaskGeneratorUtils.extractMinionInstanceTag(tableConfig,
@@ -247,7 +246,7 @@ public class TaskGeneratorUtilsTest {
 
     @Override
     public List<PinotTaskConfig> generateTasks(List<TableConfig> tableConfigs) {
-      return Collections.emptyList();
+      return List.of();
     }
   }
 }
