@@ -18,8 +18,8 @@
  */
 package org.apache.pinot.query.planner.physical;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import org.apache.calcite.runtime.PairList;
 import org.apache.pinot.common.utils.DataSchema;
@@ -39,16 +39,16 @@ public class DispatchableSubPlanTest {
   @Test
   public void testIsAllLeafStagesEmptyTrue() {
     DispatchableSubPlan plan = new DispatchableSubPlan(
-        PairList.of(0, "col1"), Collections.emptyMap(), Set.of("testTable"),
-        Collections.emptyMap(), 5, true);
+        PairList.of(0, "col1"), Map.of(), Set.of("testTable"),
+        Map.of(), 5, true);
     assertTrue(plan.isAllLeafStagesEmpty());
   }
 
   @Test
   public void testIsAllLeafStagesEmptyFalse() {
     DispatchableSubPlan plan = new DispatchableSubPlan(
-        PairList.of(0, "col1"), Collections.emptyMap(), Set.of("testTable"),
-        Collections.emptyMap(), 3, false);
+        PairList.of(0, "col1"), Map.of(), Set.of("testTable"),
+        Map.of(), 3, false);
     assertFalse(plan.isAllLeafStagesEmpty());
   }
 
@@ -56,8 +56,8 @@ public class DispatchableSubPlanTest {
   public void testIsAllLeafStagesEmptyDefaultFalse() {
     // 5-arg constructor defaults to false
     DispatchableSubPlan plan = new DispatchableSubPlan(
-        PairList.of(0, "col1"), Collections.emptyMap(), Set.of("testTable"),
-        Collections.emptyMap(), 5);
+        PairList.of(0, "col1"), Map.of(), Set.of("testTable"),
+        Map.of(), 5);
     assertFalse(plan.isAllLeafStagesEmpty());
   }
 
@@ -65,8 +65,8 @@ public class DispatchableSubPlanTest {
   public void testIsAllLeafStagesEmptyNoTables() {
     // Constant expression query (no tables) — flag can still be false
     DispatchableSubPlan plan = new DispatchableSubPlan(
-        PairList.of(0, "col1"), Collections.emptyMap(), Collections.emptySet(),
-        Collections.emptyMap(), 0, false);
+        PairList.of(0, "col1"), Map.of(), Set.of(),
+        Map.of(), 0, false);
     assertFalse(plan.isAllLeafStagesEmpty());
   }
 
