@@ -19,7 +19,6 @@
 package org.apache.pinot.segment.local.upsert;
 
 import com.google.common.base.Preconditions;
-import java.util.Collections;
 import java.util.List;
 import javax.annotation.Nullable;
 import javax.annotation.concurrent.ThreadSafe;
@@ -65,7 +64,7 @@ public abstract class BaseTableUpsertMetadataManager implements TableUpsertMetad
         comparisonColumns = List.of(timeColumnName);
       } else {
         // No comparison column and no time column: use segment creation time for comparison
-        comparisonColumns = Collections.emptyList();
+        comparisonColumns = List.of();
       }
     }
 
